# meal-tracker

./: .gitignore  main.py  pyproject.toml
app/core/: config.py
