[project]
name = "meal-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "sqlalchemy>=2.0.49",
]
